--- a/src/components/Head/index.css
+++ b/src/components/Head/index.css
@@ -2,6 +2,9 @@
     height: 300px;
     background-color: #333;
     width: 100%;
+    background-image: url('../../statics/fengshui1.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .HeaderLogo {
     width: 70px;
@@ -21,11 +24,13 @@
 }
 .Login {
     cursor: pointer;
-    color: #fff !important;
+    color: #333 !important;
+    font-weight: bold;
 }
 .Register {
+    font-weight: bold;
     cursor: pointer;
-    color: #fff !important;
+    color: #333 !important;
 }
 .Login:hover,
 .Register:hover {
