--- a/src/pages/Desk/Book/index.css
+++ b/src/pages/Desk/Book/index.css
@@ -4,6 +4,7 @@
     transition: all 0.25s ease-out;
 }
 .zhuanzhuCol {
+    min-height: 130px;
     border-bottom: 1px #ccc dashed;
-    padding: 0px 20px 60px 0;
+    /* padding: 0px 20px 60px 0; */
 }
