--- a/src/pages/Mobile/PublicClass/index.css
+++ b/src/pages/Mobile/PublicClass/index.css
@@ -5,7 +5,8 @@
     background-color: #fff;
     border-radius: 4px;
     box-shadow: 0 0 3px 3px #eee;
-    padding: 24px 32px 20px;
+    padding: 24px 8px 20px;
+    margin-bottom: 16px;
 }
 .MobilePublicWrapper:hover {
     box-shadow: 0 0 8px 8px #eee;
@@ -22,7 +23,7 @@
     width: 100%;
 }
 .MobileListItem:hover {
-    .listTitle {
+    .MobileDistTitle {
         color: #000 !important;
     }
 }
