--- a/src/components/Head/index.scss
+++ b/src/components/Head/index.scss
@@ -1,4 +1,12 @@
 .HeaderWrapper {
+    display: flex;
+    justify-content: center;
+    padding-left: 16px;
+    padding-left: 16px;
+    box-shadow: rgba(0, 0, 0, 0.12);
+    background-color: rgba(0, 0, 0, 0.85);
+}
+.HeaderContent {
     height: 300px;
     background-color: #333;
     width: 100%;
@@ -7,20 +15,19 @@
     background-size: cover;
 }
 .HeaderLogo {
-    width: 70px;
-    height: 70px;
-    border-radius: 35px;
-    margin-left: 50px;
-    margin-top: 50px;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
 }
 .HeaderTitle {
     color: #fff;
-    margin-top: 73px;
     font-size: 24px;
+    font-weight: bold;
 }
 .User {
     margin-right: 30px;
     float: right;
+    height: 100%;
 }
 .Login {
     cursor: pointer;
@@ -41,4 +48,25 @@
 }
 .unactiveWay {
     cursor: pointer;
+}
+.activeMenu {
+    margin-left: 32px;
+    margin-right: 32px;
+    color: #fff;
+    font-size: 20px;
+}
+.unActiveMenu {
+    margin-left: 32px;
+    margin-right: 32px;
+    color: #8e8e8e;
+    font-size: 20px;
+}
+.MenuLink {
+    display: inline-block;
+    height: 100%;
+}
+.MenuLink:hover {
+    p {
+        color: #fff;
+    }
 }
