--- a/src/pages/Desk/Book/index.module.scss
+++ b/src/pages/Desk/Book/index.module.scss
@@ -1,3 +1,7 @@
+@import '../../../global';
+.boxWrapper {
+    padding: $box-padding-row;
+}
 .bookGao:hover {
     transform: scale(1.1);
     transition: all 0.25s ease-in;
