--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,18 @@
 $box-padding-row: 32px;
 $box-padding-left: 32px;
 $box-padding-right: 32px;
+
+$main-mu-color: #8aa54f;
+$sub-mu-color: #f2fcf1;
+
+$main-tu-color: #754a2a;
+$sub-tu-color: #faf2e6;
+
+$main-huo-color: #bd4d4a;
+$sub-huo-color: #fbf4ed;
+
+$main-jin-color: #edbe4a;
+$sub-jin-color: #fef7ed;
+
+$main-shui-color: #3e73b1;
+$sub-shui-color: #f4faff;
