--- a/src/pages/Desk/RiYun/index.scss
+++ b/src/pages/Desk/RiYun/index.scss
@@ -2,7 +2,7 @@
     width: 520px;
 }
 .Header {
-    background-color: #bd4d4a;
+    // background-color: #bd4d4a;
     height: 60px;
     color: #fff;
     font-size: 22px;
@@ -24,7 +24,7 @@
     padding: 22px 18px;
     flex: 1;
     border-radius: 8px;
-    color: #bd4d4a;
+    // color: #bd4d4a;
     text-align: center;
     line-height: 1.7;
 }
