--- a/src/global.scss
+++ b/src/global.scss
@@ -2,17 +2,21 @@ $box-padding-row: 32px;
 $box-padding-left: 32px;
 $box-padding-right: 32px;
 
-$main-mu-color: #8aa54f;
-$sub-mu-color: #f2fcf1;
+$main-mu-color: #83a640;
+$sub-mu-color: #f0fcef;
 
-$main-tu-color: #754a2a;
-$sub-tu-color: #faf2e6;
+$main-tu-color: #7d4723;
+$sub-tu-color: #fcf1e5;
 
-$main-huo-color: #bd4d4a;
-$sub-huo-color: #fbf4ed;
+$main-huo-color: #cd4245;
+$sub-huo-color: #fdf3ed;
 
-$main-jin-color: #edbe4a;
-$sub-jin-color: #fef7ed;
+$main-jin-color: #f7bb23;
+$sub-jin-color: #fff7eb;
 
-$main-shui-color: #3e73b1;
-$sub-shui-color: #f4faff;
+$main-shui-color: #2775b7;
+$sub-shui-color: #f2f9ff;
+@font-face {
+    font-family: 'Britanic';
+    src: url('./statics/fonts/BRITANIC.TTF') format('truetype');
+}
