--- a/src/pages/Desk/RiYun/index.scss
+++ b/src/pages/Desk/RiYun/index.scss
@@ -1,13 +1,14 @@
 .riyun {
-    width: 520px;
+    width: 470px;
 }
 .Header {
     // background-color: #bd4d4a;
     height: 60px;
     color: #fff;
-    font-size: 22px;
+    font-size: 24px;
     line-height: 60px;
     text-align: center;
+    // font-family: 'Britanic', sans-serif;
 }
 .Content {
     padding: 18px 22px;
@@ -19,25 +20,43 @@
     display: flex;
     gap: 16px;
 }
+.ItemTitle {
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 14px;
+}
 .ContentItem {
     background-color: #fbf4ed;
-    padding: 22px 18px;
+    padding: 28px 14px;
     flex: 1;
     border-radius: 8px;
-    // color: #bd4d4a;
     text-align: center;
     line-height: 1.7;
+    font-family: 'MiSans', sans-serif;
+}
+.ContentItemBox:last-child {
+    .ContentItem {
+        padding: 6px 4px;
+    }
+    .SmallTextParent {
+        font-size: 12px;
+        font-weight: bold;
+    }
+    .ItemTitle {
+        font-weight: 600;
+        font-size: 16px;
+        margin-bottom: 2px;
+    }
 }
 .SmallItem {
     display: flex;
-}
-.ItemTitle {
-    font-weight: 600;
-    font-size: 18px;
 }
 .SmallText {
     font-size: 12px;
 }
 .SmallContent {
     flex: 1;
+}
+.SmallTextParent {
+    font-weight: bold;
 }
