--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,21 @@ body {
     display: flex;
     flex-direction: column;
     height: 100%;
+    font-size: 14px;
 }
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+@font-face {
+    font-family: 'Britanic';
+    src: url('./statics/fonts/BRITANIC.woff') format('woff'), url('./statics/fonts/BRITANIC.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'MiSans';
+    src: url('./statics/fonts/MiSans.woff') format('woff'), url('./statics/fonts/MiSans.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
 }
