--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
-@font-face {
+/* @font-face {
     font-family: 'Britanic';
     src: url('./statics/fonts/BRITANIC.woff') format('woff'), url('./statics/fonts/BRITANIC.woff2') format('woff2');
     font-weight: normal;
@@ -25,4 +25,4 @@ code {
     src: url('./statics/fonts/MiSans.woff') format('woff'), url('./statics/fonts/MiSans.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
-}
+} */
