--- a/src/pages/Desk/RiYun/index.scss
+++ b/src/pages/Desk/RiYun/index.scss
@@ -24,6 +24,7 @@
     font-weight: 600;
     font-size: 26px;
     margin-bottom: 14px;
+    font-family: 'MiSans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 .ContentItem {
     background-color: #fbf4ed;
@@ -61,7 +62,8 @@
     font-weight: bold;
 }
 .shuiyin {
-    font-size: 12px;
+    font-size: 14px;
     color: #c0c5db;
     text-align: center;
+    font-family: 'Fangzheng', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
