--- a/src/pages/Desk/RiYun/index.scss
+++ b/src/pages/Desk/RiYun/index.scss
@@ -9,7 +9,7 @@
     font-size: 42px;
     line-height: 84px;
     text-align: center;
-    // font-family: 'Fangzheng', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Fangzheng', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 .Content {
     padding: 16px 22px;
@@ -24,7 +24,7 @@
     font-weight: 800;
     font-size: 26px;
     margin-bottom: 14px;
-    font-family: 'MiSans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    // font-family: 'MiSans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 .ContentItem {
     background-color: #fbf4ed;
